--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,10 +15,10 @@
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li>
-                          <a href="#">Privacy Policy</a>
+                          <a href="{{ "/privacy-policy/" | prepend: site.baseurl }}">Privacy Policy</a>
                         </li>
                         <li>
-                          <a href="#">Terms of Use</a>
+                          <a href="{{ "/terms-of-use/" | prepend: site.baseurl }}">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
